# ima-note-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  remote-install.sh
src/ima_note_mcp/: server.py
tests/: test_init_config.py
